--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="stylesheets/styles.css">
   <title>Frontend Mentor | Base Apparel coming soon page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <header class="main-header">
-    <img src="images/logo.svg" alt="Page logo">
+    <img src="images/logo.svg" class="logo" alt="Page logo">
   </header>
 
   <div class="image-container">
@@ -34,10 +29,11 @@
       </p>
       <form class="form">
         <div class="form-field">
-          <input type="email" name="email" id="email" placeholder="Email Address">
+          <input type="email" name="email" id="email" class="input" placeholder="Email Address">
           <button class="button form-submit">
             <img src="images/icon-arrow.svg" alt="Form submit arrow button">
           </button>
+          <p class="form-message">Please provide a valid email</p>
         </div>
       </form>
     </section>
