Funcionalidad JS implementada

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals.
       </p>
       <form class="form">
-        <div class="form-field">
+        <div class="form-field" id="email-form-field">
           <input type="email" name="email" id="email" class="input" placeholder="Email Address">
           <button class="button form-submit">
             <img src="images/icon-arrow.svg" alt="Form submit arrow button">
@@ -38,5 +38,7 @@
       </form>
     </section>
   </main>
+
+  <script src="javascripts/app.js"></script>
 </body>
 </html>
